Added basic example of using jQuery to display the formatted version of input in real time as user types, as well as a little styling.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
 
   <head>
     <title>formatting helper for /u/MostlyReadRarelyPost</title>
+
+    <link href="css/style.css" media="all" rel="stylesheet" type="text/css" />
+    <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
   </head>
 
   <body>
     <p>The web app will go under here:</p>
 
+    <div>
+        <textarea id="input" data-placeholder="Enter input text here" rows="12"></textarea>
+        <div id="output"></div>
+    </div>
   </body>
 </html>
